lib/dns/zonefile/parser.rb
require 'treetop'

module DNS
  module Zonefile
    # Autogenerated from a Treetop grammar. Edits may be lost.


    module ZonefileGrammar # :nodoc:
      include Treetop::Runtime

      def root
        @root ||= :zone
      end

      module Zone0
        def soa
          elements[1]
        end

      end

      module Zone1
        def variables
          @variables ||= begin
            raw = elements[0].elements.select { |e| e.to_s =~ /^\$/ }
            variables = {}
            raw.each do |e|
              variables[e.name.text_value.to_s] = e.value.text_value.to_s
            end
            variables
          end
        end

        def origin
          soa.origin.host.to_s
        end

        def to_s
          text_value
        end

        def rr
          elements[-1].elements.select { |e| e.to_s !~ /\A\s*([;$].*)?\z|\A\z/; }
        end

        def entries
          elements[0].elements.select { |e| e.to_s !~ /\A\s*(;.*)?\z|\A\z/; } +
            [soa] +
            elements[-1].elements.select { |e| e.to_s !~ /\A\s*(;.*)?\z|\A\z/; }
        end
      end

      def _nt_zone
        start_index = index
        if node_cache[:zone].has_key?(index)
          cached = node_cache[:zone][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        s1, i1 = [], index
        loop do
          i2 = index
          r3 = _nt_variable
          if r3
            r2 = r3
          else
            r4 = _nt_space_or_break
            if r4
              r2 = r4
            else
              r5 = _nt_comment
              if r5
                r2 = r5
              else
                @index = i2
                r2 = nil
              end
            end
          end
          if r2
            s1 << r2
          else
            break
          end
        end
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        s0 << r1
        if r1
          r6 = _nt_soa
          s0 << r6
          if r6
            s7, i7 = [], index
            loop do
              i8 = index
              r9 = _nt_resource_record
              if r9
                r8 = r9
              else
                r10 = _nt_variable
                if r10
                  r8 = r10
                else
                  r11 = _nt_comment
                  if r11
                    r8 = r11
                  else
                    r12 = _nt_space
                    if r12
                      r8 = r12
                    else
                      r13 = _nt_linebreak
                      if r13
                        r8 = r13
                      else
                        @index = i8
                        r8 = nil
                      end
                    end
                  end
                end
              end
              if r8
                s7 << r8
              else
                break
              end
            end
            r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
            s0 << r7
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Zone0)
          r0.extend(Zone1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:zone][start_index] = r0

        r0
      end

      module Variable0
        def name
          elements[1]
        end

        def space
          elements[2]
        end

        def value
          elements[3]
        end

      end

      module Variable1
        def to_s
          "$#{name.text_value.to_s} #{value.text_value.to_s}"
        end

        def parse_type ; :variable ; end
      end

      def _nt_variable
        start_index = index
        if node_cache[:variable].has_key?(index)
          cached = node_cache[:variable][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?("$", false, index)
          r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("$")
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            if has_terminal?('\G[a-zA-Z0-9]', true, index)
              r3 = true
              @index += 1
            else
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          if s2.empty?
            @index = i2
            r2 = nil
          else
            r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          end
          s0 << r2
          if r2
            r4 = _nt_space
            s0 << r4
            if r4
              s5, i5 = [], index
              loop do
                if has_terminal?('\G[a-zA-Z0-9\\.\\-]', true, index)
                  r6 = true
                  @index += 1
                else
                  r6 = nil
                end
                if r6
                  s5 << r6
                else
                  break
                end
              end
              if s5.empty?
                @index = i5
                r5 = nil
              else
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
              end
              s0 << r5
              if r5
                r8 = _nt_space
                if r8
                  r7 = r8
                else
                  r7 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r7
                if r7
                  r10 = _nt_comment
                  if r10
                    r9 = r10
                  else
                    r9 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r9
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Variable0)
          r0.extend(Variable1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:variable][start_index] = r0

        r0
      end

      module Soa0
        def origin
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl
          elements[2]
        end

        def klass
          elements[3]
        end

        def space2
          elements[5]
        end

        def ns
          elements[6]
        end

        def space3
          elements[7]
        end

        def rp
          elements[8]
        end

        def space4
          elements[9]
        end

        def serial
          elements[12]
        end

        def space_or_break1
          elements[13]
        end

        def refresh
          elements[14]
        end

        def space_or_break2
          elements[15]
        end

        def reretry
          elements[16]
        end

        def space_or_break3
          elements[17]
        end

        def expiry
          elements[18]
        end

        def space_or_break4
          elements[19]
        end

        def nxttl
          elements[20]
        end

      end

      module Soa1
        def to_s
          "#{origin} #{ttl} #{klass} SOA #{ns} #{rp} (#{serial} #{refresh} #{reretry} #{expiry} #{nxttl})"
        end

        def parse_type ; :soa ; end
      end

      def _nt_soa
        start_index = index
        if node_cache[:soa].has_key?(index)
          cached = node_cache[:soa][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_origin
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl
            s0 << r3
            if r3
              r4 = _nt_klass
              s0 << r4
              if r4
                if has_terminal?("SOA", false, index)
                  r5 = instantiate_node(SyntaxNode,input, index...(index + 3))
                  @index += 3
                else
                  terminal_parse_failure("SOA")
                  r5 = nil
                end
                s0 << r5
                if r5
                  r6 = _nt_space
                  s0 << r6
                  if r6
                    r7 = _nt_ns
                    s0 << r7
                    if r7
                      r8 = _nt_space
                      s0 << r8
                      if r8
                        r9 = _nt_rp
                        s0 << r9
                        if r9
                          r10 = _nt_space
                          s0 << r10
                          if r10
                            if has_terminal?("(", false, index)
                              r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
                              @index += 1
                            else
                              terminal_parse_failure("(")
                              r12 = nil
                            end
                            if r12
                              r11 = r12
                            else
                              r11 = instantiate_node(SyntaxNode,input, index...index)
                            end
                            s0 << r11
                            if r11
                              s13, i13 = [], index
                              loop do
                                r14 = _nt_space_or_break
                                if r14
                                  s13 << r14
                                else
                                  break
                                end
                              end
                              r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
                              s0 << r13
                              if r13
                                r15 = _nt_serial
                                s0 << r15
                                if r15
                                  r16 = _nt_space_or_break
                                  s0 << r16
                                  if r16
                                    r17 = _nt_refresh
                                    s0 << r17
                                    if r17
                                      r18 = _nt_space_or_break
                                      s0 << r18
                                      if r18
                                        r19 = _nt_reretry
                                        s0 << r19
                                        if r19
                                          r20 = _nt_space_or_break
                                          s0 << r20
                                          if r20
                                            r21 = _nt_expiry
                                            s0 << r21
                                            if r21
                                              r22 = _nt_space_or_break
                                              s0 << r22
                                              if r22
                                                r23 = _nt_nxttl
                                                s0 << r23
                                                if r23
                                                  s24, i24 = [], index
                                                  loop do
                                                    r25 = _nt_space_or_break
                                                    if r25
                                                      s24 << r25
                                                    else
                                                      break
                                                    end
                                                  end
                                                  r24 = instantiate_node(SyntaxNode,input, i24...index, s24)
                                                  s0 << r24
                                                  if r24
                                                    if has_terminal?(")", false, index)
                                                      r27 = instantiate_node(SyntaxNode,input, index...(index + 1))
                                                      @index += 1
                                                    else
                                                      terminal_parse_failure(")")
                                                      r27 = nil
                                                    end
                                                    if r27
                                                      r26 = r27
                                                    else
                                                      r26 = instantiate_node(SyntaxNode,input, index...index)
                                                    end
                                                    s0 << r26
                                                  end
                                                end
                                              end
                                            end
                                          end
                                        end
                                      end
                                    end
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Soa0)
          r0.extend(Soa1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:soa][start_index] = r0

        r0
      end

      module ResourceRecord0
        def record
          elements[0]
        end

        def linebreak
          elements[3]
        end
      end

      module ResourceRecord1
        def zone
          p = parent
          while p.respond_to?(:parent) && p.parent
            p = p.parent
          end
          p
        end

        def to_s
          text_value
        end

        def record_type
          record.elements[4].text_value
        end

        def ttl
          record.ttl || zone.variables['TTL'].to_i
        end

        def method_missing(method_name, *args)
          if record.respond_to?(method_name)
            record.send(method_name, *args)
          end
        end

        def respond_to?(method_name)
          super || record.respond_to?(method_name)
        end

        def parse_type ; :record ; end
      end

      def _nt_resource_record
        start_index = index
        if node_cache[:resource_record].has_key?(index)
          cached = node_cache[:resource_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i1 = index
        r2 = _nt_a_record
        if r2
          r1 = r2
        else
          r3 = _nt_aaaa_record
          if r3
            r1 = r3
          else
            r4 = _nt_cname_record
            if r4
              r1 = r4
            else
              r5 = _nt_mx_record
              if r5
                r1 = r5
              else
                r6 = _nt_naptr_record
                if r6
                  r1 = r6
                else
                  r7 = _nt_ns_record
                  if r7
                    r1 = r7
                  else
                    r8 = _nt_ptr_record
                    if r8
                      r1 = r8
                    else
                      r9 = _nt_srv_record
                      if r9
                        r1 = r9
                      else
                        r10 = _nt_spf_record
                        if r10
                          r1 = r10
                        else
                          r11 = _nt_txt_record
                          if r11
                            r1 = r11
                          else
                            r12 = _nt_soa_record
                            if r12
                              r1 = r12
                            else
                              r13 = _nt_alias_record
                              if r13
                                r1 = r13
                              else
                                @index = i1
                                r1 = nil
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        s0 << r1
        if r1
          s14, i14 = [], index
          loop do
            r15 = _nt_space
            if r15
              s14 << r15
            else
              break
            end
          end
          r14 = instantiate_node(SyntaxNode,input, i14...index, s14)
          s0 << r14
          if r14
            r17 = _nt_comment
            if r17
              r16 = r17
            else
              r16 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r16
            if r16
              r18 = _nt_linebreak
              s0 << r18
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ResourceRecord0)
          r0.extend(ResourceRecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:resource_record][start_index] = r0

        r0
      end

      module ARecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl
          elements[2]
        end

        def klass
          elements[3]
        end

        def space2
          elements[5]
        end

        def ip_address
          elements[6]
        end
      end

      module ARecord1
        def to_s
          "#{host} #{ttl} #{klass} A #{ip_address}"
        end
      end

      def _nt_a_record
        start_index = index
        if node_cache[:a_record].has_key?(index)
          cached = node_cache[:a_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_host
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl
            s0 << r3
            if r3
              r4 = _nt_klass
              s0 << r4
              if r4
                if has_terminal?("A", false, index)
                  r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure("A")
                  r5 = nil
                end
                s0 << r5
                if r5
                  r6 = _nt_space
                  s0 << r6
                  if r6
                    r7 = _nt_ip_address
                    s0 << r7
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ARecord0)
          r0.extend(ARecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:a_record][start_index] = r0

        r0
      end

      module IpAddress0
      end

      module IpAddress1
        def to_s
          text_value
        end
      end

      def _nt_ip_address
        start_index = index
        if node_cache[:ip_address].has_key?(index)
          cached = node_cache[:ip_address][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        s1, i1 = [], index
        loop do
          if has_terminal?('\G[\\d]', true, index)
            r2 = true
            @index += 1
          else
            r2 = nil
          end
          if r2
            s1 << r2
          else
            break
          end
        end
        if s1.empty?
          @index = i1
          r1 = nil
        else
          r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        end
        s0 << r1
        if r1
          if has_terminal?(".", false, index)
            r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(".")
            r3 = nil
          end
          s0 << r3
          if r3
            s4, i4 = [], index
            loop do
              if has_terminal?('\G[\\d]', true, index)
                r5 = true
                @index += 1
              else
                r5 = nil
              end
              if r5
                s4 << r5
              else
                break
              end
            end
            if s4.empty?
              @index = i4
              r4 = nil
            else
              r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            end
            s0 << r4
            if r4
              if has_terminal?(".", false, index)
                r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure(".")
                r6 = nil
              end
              s0 << r6
              if r6
                s7, i7 = [], index
                loop do
                  if has_terminal?('\G[\\d]', true, index)
                    r8 = true
                    @index += 1
                  else
                    r8 = nil
                  end
                  if r8
                    s7 << r8
                  else
                    break
                  end
                end
                if s7.empty?
                  @index = i7
                  r7 = nil
                else
                  r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                end
                s0 << r7
                if r7
                  if has_terminal?(".", false, index)
                    r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure(".")
                    r9 = nil
                  end
                  s0 << r9
                  if r9
                    s10, i10 = [], index
                    loop do
                      if has_terminal?('\G[\\d]', true, index)
                        r11 = true
                        @index += 1
                      else
                        r11 = nil
                      end
                      if r11
                        s10 << r11
                      else
                        break
                      end
                    end
                    if s10.empty?
                      @index = i10
                      r10 = nil
                    else
                      r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
                    end
                    s0 << r10
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(IpAddress0)
          r0.extend(IpAddress1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:ip_address][start_index] = r0

        r0
      end

      module AaaaRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl
          elements[2]
        end

        def klass
          elements[3]
        end

        def space2
          elements[5]
        end

        def ip_address
          elements[6]
        end
      end

      module AaaaRecord1
        def to_s
          "#{host} #{ttl} #{klass} AAAA #{ip_address}"
        end
      end

      def _nt_aaaa_record
        start_index = index
        if node_cache[:aaaa_record].has_key?(index)
          cached = node_cache[:aaaa_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_host
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            r3 = _nt_ttl
            s0 << r3
            if r3
              r4 = _nt_klass
              s0 << r4
              if r4
                if has_terminal?("AAAA", false, index)
                  r5 = instantiate_node(SyntaxNode,input, index...(index + 4))
                  @index += 4
                else
                  terminal_parse_failure("AAAA")
                  r5 = nil
                end
                s0 << r5
                if r5
                  r6 = _nt_space
                  s0 << r6
                  if r6
                    r7 = _nt_ip6_address
                    s0 << r7
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(AaaaRecord0)
          r0.extend(AaaaRecord1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:aaaa_record][start_index] = r0

        r0
      end

      module Ip6Address0
        def to_s
          text_value.downcase
        end
      end

      def _nt_ip6_address
        start_index = index
        if node_cache[:ip6_address].has_key?(index)
          cached = node_cache[:ip6_address][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        s0, i0 = [], index
        loop do
          if has_terminal?('\G[\\da-fA-F:.]', true, index)
            r1 = true
            @index += 1
          else
            r1 = nil
          end
          if r1
            s0 << r1
          else
            break
          end
          if s0.size == 39
            break
          end
        end
        if s0.size < 2
          @index = i0
          r0 = nil
        else
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(Ip6Address0)
        end

        node_cache[:ip6_address][start_index] = r0

        r0
      end

      module CnameRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl
          elements[2]
        end

        def klass
          elements[3]
        end

        def space2
          elements[5]
        end

        def target
          elements[6]
        end
      end

      module CnameRecord1
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def klass
          elements[2]
        end

        def ttl
          elements[3]
        end

        def space2
          elements[5]
        end

        def target
          elements[6]
        end
      end

      module CnameRecord2
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl
          elements[2]
        end

        def space2
          elements[4]
        end

        def target
          elements[5]
        end
      end

      module CnameRecord3
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def klass
          elements[2]
        end

        def space2
          elements[4]
        end

        def target
          elements[5]
        end
      end

      module CnameRecord4
        def to_s
          "#{host} #{ttl} #{klass} CNAME #{target}"
        end
      end

      def _nt_cname_record
        start_index = index
        if node_cache[:cname_record].has_key?(index)
          cached = node_cache[:cname_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        r2 = _nt_host
        s1 << r2
        if r2
          r3 = _nt_space
          s1 << r3
          if r3
            r4 = _nt_ttl
            s1 << r4
            if r4
              r5 = _nt_klass
              s1 << r5
              if r5
                if has_terminal?("CNAME", false, index)
                  r6 = instantiate_node(SyntaxNode,input, index...(index + 5))
                  @index += 5
                else
                  terminal_parse_failure("CNAME")
                  r6 = nil
                end
                s1 << r6
                if r6
                  r7 = _nt_space
                  s1 << r7
                  if r7
                    r8 = _nt_host
                    s1 << r8
                  end
                end
              end
            end
          end
        end
        if s1.last
          r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
          r1.extend(CnameRecord0)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r0 = r1
          r0.extend(CnameRecord4)
        else
          i9, s9 = index, []
          r10 = _nt_host
          s9 << r10
          if r10
            r11 = _nt_space
            s9 << r11
            if r11
              r12 = _nt_klass
              s9 << r12
              if r12
                r13 = _nt_ttl
                s9 << r13
                if r13
                  if has_terminal?("CNAME", false, index)
                    r14 = instantiate_node(SyntaxNode,input, index...(index + 5))
                    @index += 5
                  else
                    terminal_parse_failure("CNAME")
                    r14 = nil
                  end
                  s9 << r14
                  if r14
                    r15 = _nt_space
                    s9 << r15
                    if r15
                      r16 = _nt_host
                      s9 << r16
                    end
                  end
                end
              end
            end
          end
          if s9.last
            r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
            r9.extend(CnameRecord1)
          else
            @index = i9
            r9 = nil
          end
          if r9
            r0 = r9
            r0.extend(CnameRecord4)
          else
            i17, s17 = index, []
            r18 = _nt_host
            s17 << r18
            if r18
              r19 = _nt_space
              s17 << r19
              if r19
                r20 = _nt_ttl
                s17 << r20
                if r20
                  if has_terminal?("CNAME", false, index)
                    r21 = instantiate_node(SyntaxNode,input, index...(index + 5))
                    @index += 5
                  else
                    terminal_parse_failure("CNAME")
                    r21 = nil
                  end
                  s17 << r21
                  if r21
                    r22 = _nt_space
                    s17 << r22
                    if r22
                      r23 = _nt_host
                      s17 << r23
                    end
                  end
                end
              end
            end
            if s17.last
              r17 = instantiate_node(SyntaxNode,input, i17...index, s17)
              r17.extend(CnameRecord2)
            else
              @index = i17
              r17 = nil
            end
            if r17
              r0 = r17
              r0.extend(CnameRecord4)
            else
              i24, s24 = index, []
              r25 = _nt_host
              s24 << r25
              if r25
                r26 = _nt_space
                s24 << r26
                if r26
                  r27 = _nt_klass
                  s24 << r27
                  if r27
                    if has_terminal?("CNAME", false, index)
                      r28 = instantiate_node(SyntaxNode,input, index...(index + 5))
                      @index += 5
                    else
                      terminal_parse_failure("CNAME")
                      r28 = nil
                    end
                    s24 << r28
                    if r28
                      r29 = _nt_space
                      s24 << r29
                      if r29
                        r30 = _nt_host
                        s24 << r30
                      end
                    end
                  end
                end
              end
              if s24.last
                r24 = instantiate_node(SyntaxNode,input, i24...index, s24)
                r24.extend(CnameRecord3)
              else
                @index = i24
                r24 = nil
              end
              if r24
                r0 = r24
                r0.extend(CnameRecord4)
              else
                @index = i0
                r0 = nil
              end
            end
          end
        end

        node_cache[:cname_record][start_index] = r0

        r0
      end

      module MxRecord0
        def host
          elements[0]
        end

        def space1
          elements[1]
        end

        def ttl
          elements[2]
        end

        def klass
          elements[3]
        end

        def space2
          elements[5]
        end

        def priority
          elements[6]
        end

        def space3
          elements[7]
        end

        def exchanger
          elements[8]
        end
      end

      module MxRecord1
        def to_s
          "#{host} #{ttl} #{klass} MX #{priority} #{exchanger}"
        end
      end

      def _nt_mx_record
        start_index = index
        if node_cache[:mx_record].has_key?(index)
          cached = node_cache[:mx_record][index]
          if cached
            cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end
